--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,4 @@
 *, *:before, *:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -40,15 +38,8 @@ form {
 }
 
 input[type="text"],
-input[type="password"],
-input[type="date"],
-input[type="datetime"],
 input[type="email"],
-input[type="number"],
-input[type="search"],
 input[type="tel"],
-input[type="time"],
-input[type="url"],
 textarea,
 select {
   background: rgba(255,255,255,0.1);
@@ -92,10 +83,6 @@ box-sizing: border-box;
  background-repeat: no-repeat;
 }
 
-#zipcode {
-  width: 50%;
-}
-
 input:focus {
   border: solid 3px orange;
   color: black;
@@ -137,31 +124,8 @@ input:focus:-moz-placeholder { color:transparent; } /* FF 4-18 */
 input:focus::-moz-placeholder { color:transparent; } /* FF 19+ */
 input:focus:-ms-input-placeholder { color:transparent; }
 
-
-input[type="radio"],
-input[type="checkbox"] {
-  margin: 2em 8px 8px 0;
-  background-color: black;
-}
-
-input[type="checkbox"]:checked {
-
-    }
-
-
-button {
-  padding: 19px 39px 18px 39px;
-  color: black;
-  background-color: #fcbb66;
-  font-size: 18px;
-  text-align: center;
-  font-style: normal;
-  border-radius: 5px;
-  width: 100%;
-  border-style: none;
-  /*border: 1px solid #3ac162;*/
-  /*border-width: 1px 1px 3px;*/
-  margin-bottom: 10px;
+#zipcode {
+  width: 50%;
 }
 
 fieldset {
@@ -195,6 +159,7 @@ label.light {
 
 #other_topics{
   min-height: 7em;
+  margin-bottom: 15px;
 }
 
 form p {
@@ -203,9 +168,47 @@ form p {
   font-size: .9em;
 }
 
+#Border_Newsletter{
+  width: 100%;
+  height: 2px;
+  background-color: black;
+}
+
+.Newsletter_Set {
+  background-color: #eee;
+  padding: 15px;
+  border-radius: 5px;
+}
+
+.Newsletter_Title {
+  border: none;
+  padding: 80px 0px 10px 0px;
+}
+
+input[type="radio"],
+input[type="checkbox"] {
+  margin: 2em 8px 8px 0;
+  background-color: black;
+}
+
+
+button {
+  padding: 19px 39px 18px 39px;
+  color: black;
+  background-color: #fcbb66;
+  font-size: 18px;
+  text-align: center;
+  font-style: normal;
+  border-radius: 5px;
+  width: 100%;
+  border-style: none;
+  margin: 20px 0;
+}
+
+
 @media (min-width: 768px) {
 
-  .sign_up,{
+  .sign_up{
     max-width: 600px;
     margin: auto;
   }
@@ -214,4 +217,18 @@ form p {
     max-width: 600px;
     margin: auto;
   }
+
+  .Contact_Information label{
+    width: 20%;
+    margin-right: 1em;
+    display: inline-block;
+  }
+
+  .Contact_Information input,
+  .Contact_Information select{
+    width: 76%;
+    display: inline-block;
+  }
+
+
 }
