--- a/css/main.css
+++ b/css/main.css
@@ -116,11 +116,11 @@ textarea:-moz-placeholder { text-align: right;
 font-style: italic;
 font-size: .8em; } /* FF 4-18 */
 input::-moz-placeholder,
-textarea::-moz-placeholder, { text-align: right;
+textarea::-moz-placeholder { text-align: right;
 font-style: italic;
 font-size: .8em; } /* FF 19+ */
 input:-ms-input-placeholder,
-textarea:-ms-input-placeholder, { text-align: right;
+textarea:-ms-input-placeholder { text-align: right;
 font-style: italic;
 font-size: .8em; }
 
@@ -152,6 +152,7 @@ legend {
   width: 100%;
 }
 
+span,
 label {
   display: block;
   margin-bottom: 10px;
